--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="#WULANsaysyAZ" />
+    <meta property="og:title" content="#TamanSaFakhri" />
     <meta
       property="og:description"
       content="
