--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
+      rel="stylesheet"
+    />
+
     <meta property="og:title" content="#TamanSaFakhri" />
     <meta
       property="og:description"
