--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     />
     <meta property="og:url" content="https://www.wulandiaz.com/" />
     <meta property="og:type" content="website" />
-    <title>#WULANsaysyAZ</title>
+    <title>#TamanSaFakhri</title>
   </head>
   <body>
     <div id="root"></div>
