--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/wdlogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light" />
     <meta name="theme-color" content="#ffffff" />
@@ -72,7 +72,7 @@
     />
     <meta
       property="og:image"
-      content="https://blogger.googleusercontent.com/img/a/AVvXsEhEXJ4SgaWD9_BQdhvzzp5K1cipTcErHPHKpj32KOv1EkJbOY00O1aNqTx4eId9gf6Q0xqP6XBqCxtNU2KTc-x7ALXueiQ-CUzFT4FIdlaXgaaQoiCCcIwwxauwQXf16M8dgg0KX4K5wEGOXy-DoJZkqrQH5SfPcf4xhpdIPvOou909W65R_FQJO3YfvZg"
+      content="https://blogger.googleusercontent.com/img/a/AVvXsEggJHYqtpV9IGJdg7UlxsAMv71jewA3BXgPD62mysyfOdtujO24PctrdjjkALwHIF1OI3qD2imTpH7R0UecrsDrj11bNYQM9aOwwe3uqNHF2Z4XJ1VrbWQZT8G_-aMte3ycu5WwnChY2dD7BbEcpDD6iCqXPgNWGnQDdN8k5GGwVytlJDdD-AXyZ2EEJpg"
     />
     <meta property="og:url" content="https://www.wulandiaz.com/" />
     <meta property="og:type" content="website" />
