fix size and performance

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       property="og:image"
       content="https://blogger.googleusercontent.com/img/a/AVvXsEggJHYqtpV9IGJdg7UlxsAMv71jewA3BXgPD62mysyfOdtujO24PctrdjjkALwHIF1OI3qD2imTpH7R0UecrsDrj11bNYQM9aOwwe3uqNHF2Z4XJ1VrbWQZT8G_-aMte3ycu5WwnChY2dD7BbEcpDD6iCqXPgNWGnQDdN8k5GGwVytlJDdD-AXyZ2EEJpg"
     />
-    <meta property="og:url" content="https://www.wulandiaz.com/" />
+    <meta property="og:url" content="https://www.safanafakhri.com/" />
     <meta property="og:type" content="website" />
     <title>#TamanSaFakhri</title>
   </head>
