--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="#TamanSaFakhri" />
+    <meta property="og:title" content="Wedding of Safana & Fakhri" />
     <meta
       property="og:description"
       content="
       The Wedding of Safana Fakhri
-      Graha Bhima Sakti, August 31st 2025
-      #TamanSaFakhri"
+      Graha Bhima Sakti, August 31st 2025"
     />
     <meta
       property="og:image"
@@ -76,7 +75,7 @@
     />
     <meta property="og:url" content="https://www.safanafakhri.com/" />
     <meta property="og:type" content="website" />
-    <title>#TamanSaFakhri</title>
+    <title>Wedding of Safana & Fakhri</title>
   </head>
   <body>
     <div id="root"></div>
